[package]
name = "pchain-mempool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pchain-types = { git = "https://github.com/parallelchain-io/pchain-types-rust.git" }
priority-queue = "1.3.2"
rand = "0.8.5"